fixes validating stuff
